# devcontainers

./: .gitignore  README.md  test-setup.sh
.devcontainer/: Dockerfile  devcontainer.json
examples/: README.md  app.py  index.js  package.json
examples/python-uv-app/: README.md  main.py  pyproject.toml
examples/typescript-npm-app/: .eslintrc.json  README.md  package.json  tsconfig.json
examples/typescript-npm-app/src/: index.ts  types.ts
